[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/menu.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/PixelOperator.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://themes/sliders.tres" type="Theme" id=3]
[ext_resource path="res://assets/scripts/settings.gd" type="Script" id=4]
[ext_resource path="res://scenes/UI/ButtonBG.tscn" type="PackedScene" id=5]
[ext_resource path="res://themes/menu_btn.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/audio/complete_action.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 12
outline_size = 1
outline_color = Color( 0.207843, 0.180392, 0.239216, 1 )
font_data = ExtResource( 2 )

[node name="Settings" type="Node2D"]
script = ExtResource( 4 )

[node name="SettingsMenu" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 256.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="SettingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.678431, 0.411765, 0.235294, 0.521569 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = -55.0
margin_right = 79.0
margin_bottom = 55.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterLabel" type="Label" parent="SettingsMenu/ColorRect/VBoxContainer"]
margin_right = 158.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "Master"
align = 1
valign = 1

[node name="Master" type="HSlider" parent="SettingsMenu/ColorRect/VBoxContainer"]
margin_top = 13.0
margin_right = 158.0
margin_bottom = 29.0
theme = ExtResource( 3 )
min_value = -80.0
max_value = 6.0

[node name="MusicLabel" type="Label" parent="SettingsMenu/ColorRect/VBoxContainer"]
margin_top = 29.0
margin_right = 158.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "Music"
align = 1
valign = 1

[node name="Music" type="HSlider" parent="SettingsMenu/ColorRect/VBoxContainer"]
margin_top = 42.0
margin_right = 158.0
margin_bottom = 58.0
theme = ExtResource( 3 )
min_value = -80.0
max_value = 6.0

[node name="SFXLabel" type="Label" parent="SettingsMenu/ColorRect/VBoxContainer"]
margin_top = 58.0
margin_right = 158.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
text = "SFX"
align = 1
valign = 1

[node name="SFX" type="HSlider" parent="SettingsMenu/ColorRect/VBoxContainer"]
margin_top = 71.0
margin_right = 158.0
margin_bottom = 87.0
theme = ExtResource( 3 )
min_value = -80.0
max_value = 6.0

[node name="ButtonBG" parent="SettingsMenu/ColorRect" instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -21.0
margin_right = -6.0
margin_bottom = -4.0

[node name="Button" type="Button" parent="SettingsMenu/ColorRect/ButtonBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -11.0
margin_right = 40.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 6 )
text = "Save & Exit"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SettingsMenu"]
stream = ExtResource( 7 )
bus = "SFX"

[connection signal="value_changed" from="SettingsMenu/ColorRect/VBoxContainer/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="SettingsMenu/ColorRect/VBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="SettingsMenu/ColorRect/VBoxContainer/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="button_up" from="SettingsMenu/ColorRect/ButtonBG/Button" to="." method="_on_Button_button_up"]
